made some changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
 section{
-    background-color: #163020;
-
-
+    background-image: url(/back.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    min-width: 90vw;
+}
+h1 {
+    -webkit-text-stroke: 2px #f9f9f9; 
 }
